[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/characters/players/TopdownPlayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/tasks/FoodTask.gd" type="Script" id=2]
[ext_resource path="res://scenes/characters/enemies/FoodEnemy.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 128 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 224, 5 )

[node name="FoodTask" type="Node2D"]
script = ExtResource( 2 )

[node name="Node2D" type="Node2D" parent="."]
z_index = -410

[node name="ColorRect" type="ColorRect" parent="Node2D"]
margin_right = 448.0
margin_bottom = 256.0
color = Color( 0.266667, 0.0196078, 0.0196078, 1 )

[node name="MarginContainer" type="MarginContainer" parent="Node2D/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="ColorRect" type="ColorRect" parent="Node2D/ColorRect/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 438.0
margin_bottom = 246.0
color = Color( 0.329412, 0.592157, 0.431373, 1 )

[node name="TopdownPlayer" parent="." instance=ExtResource( 1 )]
position = Vector2( 224, 128 )

[node name="FoodEnemy" parent="." instance=ExtResource( 3 )]
position = Vector2( 262, 130 )

[node name="FoodEnemy2" parent="." instance=ExtResource( 3 )]
position = Vector2( 288, 132 )

[node name="FoodEnemy3" parent="." instance=ExtResource( 3 )]
position = Vector2( 309, 133 )

[node name="FoodEnemy4" parent="." instance=ExtResource( 3 )]
position = Vector2( 342, 137 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 5, 128 )
shape = SubResource( 1 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2( 438, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 5, 128 )
shape = SubResource( 1 )

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2( 438, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2( -214, 5 )
shape = SubResource( 2 )

[node name="StaticBody2D4" type="StaticBody2D" parent="."]
position = Vector2( 438, 246 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D4"]
position = Vector2( -214, 5 )
shape = SubResource( 2 )

[node name="SpawnInterval" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="SpawnInterval" to="." method="_on_SpawnInterval_timeout"]
